# iac-labs-infra

./: .gitignore  .gitmodules  README.md  lab2_zad3_logs.txt  lab2_zad4_logs.txt  zad1_logs.txt
ansible/zad1/: Dockerfile  docker-compose.yaml  inventory.yaml  site.yaml  static_site.cfg  test-connection.yaml
ansible/zad1/static-site-src/: index.html
ansible/zad2/: docker-compose.yaml  env.docker  inventory.yaml  playbook.yaml
ansible/zad2/app/: README.md  pyproject.toml  run.py
ansible/zad2/app/apps/: __init__.py  config.py
ansible/zad2/app/apps/authentication/: forms.py  models.py  routes.py  util.py
ansible/zad2/app/apps/home/: routes.py
ansible/zad2/app/tests/: test_true.py
logs/: lab2_pulugmi_zad2_logs.txt  lab2_zad2_logs.txt
pulumi/: Pulumi.yaml
pulumi/zad1/: Pulumi.83030-local.yaml  Pulumi.yaml  __main__.py  index.html
pulumi/zad2/: Pulumi.yaml  __main__.py  main.tf  requirements.txt
pulumi/zad3/: __main__.py
terraform/zad1/1-import/: main.tf
terraform/zad1/2-zmienne/: main.tf  terraform.tfvars  variables.tf
terraform/zad1/3-moduly/: main.tf  outputs.tf
terraform/zad1/3-moduly/modules/ec2/: main.tf
terraform/zad1/4-funkcje/: builtins.txt
terraform/zad2/: main.tf
terraform/zad3/: images.tf  main.tf  outputs.tf
terraform/zad4/: main.tf  outputs.tf  providers.tf
terraform/zad4/apprunner/: main.tf  outputs.tf  providers.tf
terraform/zad4/ecr/: providers.tf
terraform/zad4/modules/ec2/: main.tf  outputs.tf  variables.tf
terraform/zad4/modules/vpc/: main.tf
